Fix Cartsy logo to better fit on small screens

--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -219,7 +219,7 @@
     .tile-logo {
         top: 5px;
         right: 5px;
-        height: 6%
+        height: 3%
     }
 
     .under-construction-banner {
